feat: attendance report manual trigger
